--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,7 +124,18 @@
                 android:text="Đăng nhập"
                 android:textColor="@color/white"/>
 
-
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/loginGoogle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/loginBtn"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/google"
+                android:layout_centerHorizontal="true"
+                android:background="@color/white"
+                android:text="Đăng nhập"
+                android:textColor="@color/white"
+                />
         </RelativeLayout>
 
     </ScrollView>
