--- a/app/src/main/res/layout/activity_view_comment.xml
+++ b/app/src/main/res/layout/activity_view_comment.xml
@@ -32,15 +32,22 @@
                 android:src="@drawable/ic_left_black"
                 android:padding="15dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:background="@color/white"
-                android:id="@+id/cmtList"
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swipeRefresh"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/cmtTv"
-                android:layout_marginTop="10dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/row_comment" />
+                android:layout_marginTop="10dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:background="@color/white"
+                    android:id="@+id/cmtList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_comment" />
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
         </RelativeLayout>
