--- a/app/src/main/res/layout/fragment_view_book_chapter_list.xml
+++ b/app/src/main/res/layout/fragment_view_book_chapter_list.xml
@@ -29,18 +29,24 @@
         android:maxLines="1"
         android:textColor="@color/gray02"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/bookChaptersRv"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/chapterNumText"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/row_book_chapter">
+        android:layout_marginBottom="20dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/bookChaptersRv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/row_book_chapter"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </RelativeLayout>
