--- a/app/src/main/res/layout/row_book_admin.xml
+++ b/app/src/main/res/layout/row_book_admin.xml
@@ -76,7 +76,7 @@
 
         <TextView
             android:id="@+id/starTv"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.MaterialComponents.Caption"
             android:text="5"
