--- a/app/src/main/res/layout/row_user_book_library.xml
+++ b/app/src/main/res/layout/row_user_book_library.xml
@@ -42,7 +42,7 @@
             android:id="@+id/bookNameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/moreBtn"
+            android:layout_toStartOf="@id/unShowBtn"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:text="Tên sách"
             android:layout_marginLeft="10dp"
@@ -51,13 +51,14 @@
             android:maxLines="1"/>
 
         <ImageButton
-            android:id="@+id/moreBtn"
+            android:id="@+id/unShowBtn"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vert_gray"
+            android:src="@drawable/icon_disabled_visible"
             android:background="@android:color/transparent"
-            android:padding="5dp"
+            android:padding="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
             android:layout_alignParentRight="true"/>
 
         <TextView
