TuanLA_20231023_Refactor_code_load_image

--- a/app/src/main/res/layout/activity_add_point.xml
+++ b/app/src/main/res/layout/activity_add_point.xml
@@ -9,8 +9,8 @@
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/blue">
 
         <ImageButton
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/icon_back_white"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="40dp"
             android:layout_marginStart="10dp"
             android:padding="10dp"
             android:background="@android:color/transparent"/>
@@ -27,11 +27,12 @@
         <TextView
             android:id="@+id/toolbarTv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="Xác nhận giao dịch"
+            android:layout_marginTop="50dp"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:textSize="20dp"
-            android:gravity="center|center"/>
+            android:gravity="center"/>
 
     </RelativeLayout>
 
