--- a/app/src/main/res/layout/activity_balance_change.xml
+++ b/app/src/main/res/layout/activity_balance_change.xml
@@ -20,18 +20,19 @@
             android:text="Biến động số dư"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:gravity="center"/>
 
         <ImageButton
             android:id="@+id/backBtn"
-            android:background="@android:color/transparent"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_left_black"
-            android:padding="10dp" />
+            android:src="@drawable/icon_back_white"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="10dp"
+            android:padding="10dp"
+            android:background="@android:color/transparent"/>
 
     </RelativeLayout>
 
