--- a/app/src/main/res/layout/activity_category_add.xml
+++ b/app/src/main/res/layout/activity_category_add.xml
@@ -16,17 +16,20 @@
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_back_white"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/transparent"
-            android:layout_margin="10dp"
-            android:padding="5dp"/>
+            android:padding="10dp"
+            android:src="@drawable/icon_back_white" />
 
         <ImageView
             android:id="@+id/iconIv"
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:src="@drawable/logo"/>
         
         <TextView
