--- a/app/src/main/res/layout/activity_create_new_password.xml
+++ b/app/src/main/res/layout/activity_create_new_password.xml
@@ -20,18 +20,20 @@
             android:text="Tạo mật khẩu mới"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="50dp"
             android:gravity="center" />
 
         <ImageButton
             android:id="@+id/backBtn"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_left_black"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/transparent"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:src="@drawable/icon_back_white" />
 
     </RelativeLayout>
 
