--- a/app/src/main/res/layout/activity_list_book_filter.xml
+++ b/app/src/main/res/layout/activity_list_book_filter.xml
@@ -21,6 +21,7 @@
             android:text="Danh sách truyện"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:layout_marginTop="40dp"
             android:gravity="center" />
 
         <ImageButton
@@ -28,6 +29,7 @@
             android:background="@color/gray03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:src="@drawable/ic_left_black"
             android:padding="15dp" />
 
@@ -38,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_setting_black"
+            android:layout_marginTop="40dp"
             android:padding="15dp" />
 
         <androidx.recyclerview.widget.RecyclerView
