--- a/app/src/main/res/layout/activity_manage_book.xml
+++ b/app/src/main/res/layout/activity_manage_book.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:text="Bảng điểu khiển quản lý sách"
             android:textStyle="bold"
             android:textColor="@color/white"/>
@@ -36,10 +36,9 @@
             android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:src="@drawable/ic_logout_white"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="60dp"
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"/>
 
@@ -55,6 +54,7 @@
             android:text="Quản lý loại sách"
             android:textStyle="bold"
             android:textSize="14sp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/white"/>
 
         <TextView
