--- a/app/src/main/res/layout/activity_manage_request_book.xml
+++ b/app/src/main/res/layout/activity_manage_request_book.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:text="Bảng điểu khiển quản lý yêu cầu đăng sách"
             android:textStyle="bold"
             android:textColor="@color/white"/>
@@ -35,10 +35,9 @@
             android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:src="@drawable/ic_logout_white"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="60dp"
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"/>
 
@@ -54,6 +53,7 @@
             android:text="Quản lý sách"
             android:textStyle="bold"
             android:textSize="14dp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/white"/>
 
         <TextView
