--- a/app/src/main/res/layout/activity_view_chapter.xml
+++ b/app/src/main/res/layout/activity_view_chapter.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/ic_left_black"
             android:layout_alignParentStart="true"
             android:padding="8dp"
+            android:layout_marginTop="30dp"
             android:background="@android:color/transparent"/>
 
         <TextView
@@ -29,6 +30,7 @@
             android:textSize="20sp"
             android:textColor="@color/black"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="30dp"
             android:padding="5dp"/>
 
     </RelativeLayout>
