--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,13 +9,13 @@
     <RelativeLayout
         android:id="@+id/toolbarRl"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="80dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Truyện AT"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="40dp"
             android:textSize="20sp"
             android:layout_marginLeft="10dp"
             android:textColor="@color/black"
@@ -26,7 +26,7 @@
             android:id="@+id/searchBookBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="35dp"
             android:src="@drawable/ic_search_gray"
             android:layout_toStartOf="@id/filterBookBtn"
             android:layout_marginEnd="10dp"
@@ -37,7 +37,7 @@
             android:id="@+id/filterBookBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="35dp"
             android:src="@drawable/ic_filter_gray"
             android:layout_alignParentEnd= "true"
             android:layout_marginEnd="5dp"
