--- a/app/src/main/res/layout/fragment_view_book_info.xml
+++ b/app/src/main/res/layout/fragment_view_book_info.xml
@@ -16,17 +16,92 @@
         <RelativeLayout
             android:id="@+id/contentRl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="40dp">
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:id="@+id/infoRL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/gray01">
+
+                <TextView
+                    android:id="@+id/writeSpeedTv"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/writeSpeedText"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_below="@id/writeSpeedTv"
+                    android:text="Chương/Tuần"
+                    android:textSize="13sp"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/totalChapterTv"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/totalChapterText"
+                    android:layout_width="125dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/totalChapterTv"
+                    android:text="Chương - Đang ra"
+                    android:textSize="13sp"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/totalPurchasedTv"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/totalPurchasedText"
+                    android:layout_width="75dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="20dp"
+                    android:layout_below="@id/totalPurchasedTv"
+                    android:text="Lượt mua"
+                    android:textSize="13sp"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/white"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/introductionTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:textSize="18sp"
                 android:text="Nội dung"
+                android:layout_below="@id/infoRL"
                 android:textColor="@color/black"/>
 
             <RelativeLayout
