--- a/app/src/main/res/layout/activity_income_admin.xml
+++ b/app/src/main/res/layout/activity_income_admin.xml
@@ -8,82 +8,30 @@
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_toolbar02">
-
-        <TextView
-            android:id="@+id/titleTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:text="Bảng điểu khiển quản lý thu nhập"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:id="@+id/subTitileTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/titleTv"
-            android:text=""
-            android:textColor="@color/white"/>
+        android:background="@color/blue">
 
         <ImageButton
-            android:id="@+id/logoutBtn"
+            android:id="@+id/returnBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logout_white"
+            android:src="@drawable/icon_back_white"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="5dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="10dp"
+            android:padding="10dp"
             android:background="@android:color/transparent"/>
 
         <TextView
-            android:id="@+id/manageBookTv"
-            android:layout_width="wrap_content"
+            android:id="@+id/toolbarTv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/subTitileTv"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:text="Quản lý sách"
-            android:textStyle="bold"
-            android:textSize="14dp"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:id="@+id/manageCategoryTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/subTitileTv"
-            android:layout_toStartOf="@id/manageBookTv"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
-            android:text="Quản lý loại sách"
-            android:textStyle="bold"
-            android:textSize="14dp"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:id="@+id/manageRequestTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/subTitileTv"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
-            android:layout_toStartOf="@id/manageCategoryTv"
-            android:text="Quản lý yêu cầu"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:textStyle="bold" />
-
+            android:text="Chi tiết thống kê thu nhập"
+            android:layout_marginTop="50dp"
+            style="@style/TextAppearance.MaterialComponents.Headline6"
+            android:textSize="20dp"
+            android:gravity="center"/>
 
     </RelativeLayout>
 
