--- a/app/src/main/res/layout/activity_manage_book.xml
+++ b/app/src/main/res/layout/activity_manage_book.xml
@@ -72,7 +72,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/manageIncomeTv"
+            android:id="@+id/manageStatTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -80,7 +80,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_toStartOf="@id/manageRequestTv"
-            android:text="Quản lý thu nhập"
+            android:text="Xem thống kê"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:textStyle="bold" />
