--- a/app/src/main/res/layout/activity_manage_request_book.xml
+++ b/app/src/main/res/layout/activity_manage_request_book.xml
@@ -71,7 +71,7 @@
             android:textColor="@color/white"/>
 
         <TextView
-            android:id="@+id/manageIncomeTv"
+            android:id="@+id/manageStatTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
@@ -79,7 +79,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:layout_toStartOf="@id/manageCategoryTv"
-            android:text="Quản lý thu nhập"
+            android:text="Xem thống kê"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:textStyle="bold" />
