--- a/app/src/main/res/layout/activity_update_book_info.xml
+++ b/app/src/main/res/layout/activity_update_book_info.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back01"
-    tools:context=".activity.BookAddActivity">
+    tools:context=".activity.UpdateBookInfoActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
@@ -20,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@android:color/transparent"
@@ -29,22 +27,23 @@
 
         <ImageView
             android:id="@+id/iconTv"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:src="@drawable/logo"/>
 
         <TextView
+            android:id="@+id/titleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/iconTv"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-condensed"
-            android:text="Thêm truyện mới"
+            android:text="Sửa thông tin truyện"
             android:textColor="@color/white"
-            android:textSize="28sp"/>
+            android:textSize="25sp"/>
 
 
     </RelativeLayout>
@@ -60,7 +59,7 @@
             app:hintEnabled="false"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="225dp">
+            android:layout_marginTop="190dp">
 
             <EditText
                 android:id="@+id/bookNameEt"
@@ -73,7 +72,8 @@
                 android:inputType="textPersonName|textCapWords"
                 android:padding="10dp"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray01"/>
+                android:textColorHint="@color/gray01"
+                android:enabled="false"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -174,6 +174,16 @@
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
+        <CheckBox
+            android:id="@+id/finishCb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/categoryTv"
+            android:text="Đã hoàn thành"
+            android:textSize="16sp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"/>
+
         <Button
             android:id="@+id/addImageBtn"
             android:layout_width="match_parent"
@@ -182,7 +192,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/shape_button2"
-            android:layout_below="@id/categoryTv"
+            android:layout_below="@id/finishCb"
             android:text="Tải lên ảnh cho truyện"
             android:textColor="@color/black"/>
 
@@ -196,7 +206,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/blue"/>
-        
+
     </RelativeLayout>
 
     <Button
